--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h1>Domain ICP Info</h1>
+  <center><h1>Domain ICP Info</h1> </center>
   <div id="content"></div>
   <script src="popup.js"></script>
 </body>
